welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:8: error: ')' expected but 'for' found.
} for (nbpas <- 0 to 6){
  ^